[project]
name = "2a202600699-hotatbaohoang-day13"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.118.0",
    "httpx==0.28.1",
    "langfuse==2.53.0",
    "pydantic==2.11.4",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "structlog==25.4.0",
    "uvicorn[standard]==0.37.0",
]
